# HeliumOS

./: .clang-format  .gdbinit  .gitignore  CONTRIBUTING.md  Cargo.toml  HeliumOS_remake.kdev4  LICENSE  LICENSE.md  Makefile  README.MD  README.md  TODO.md  TODO.txt  Todo.md  build.rs  compose.yaml  dependencies.txt  rust-toolchain  rustfmt.toml  sbs  sbs.project  sbs.verbs
kernel/: Cargo.toml  bootboot.config  bootimg.json  build.rs  link.ld  linker.ld
kernel/arch/demo/: linker.ld
kernel/arch/i686/: linker.ld
kernel/config/config/: early_heap.hpp
kernel/core/include/: debug.hpp
kernel/core/src/: core.cpp
kernel/include/: acpi.h  apic.h  attributes.h  boot_info.h  capi_core.hpp  cfgtb.h  ctlr.h  ctype.h  debug.h  debug.hpp  dev.h  elf.h  env.h  error.h  errors.h  fb.h  fs.h  hashtable.h  initializer_list.hpp  initrd.h  interrupts.h  io.h  kernel.asm  kmath.hpp  kmod.h  kshell.h  kterm.h  kutils.hpp  lambda.h  mem.h  multiboot.h  multiboot.hpp  mutex.h  pack.h  pci.h  proc.h  psf.h  smbios.h  sys.h  tar.h  (+5 more)
kernel/include/arch/: ctlr.h  mem.h
kernel/include/asm/: ctlr.h  gdt.h  idt.h  invlpg.h  io.h  movs.h  msr.h  msr.h.asm  scas.h  stos.h  sys.h  userspace.h
kernel/include/capi/: architecture.hpp  constexpr_array.hpp  early_ordered_list.hpp  interrupt_interface.hpp  io_interface.hpp  mem_interface.hpp  memory.hpp  priv.hpp  proc_interface.hpp
kernel/include/collections/: sorted_array.h
kernel/include/debug/: debug.asm  debug.hpp
kernel/include/dev/: keyboard.hpp  pit.hpp  ps2.h  serial.hpp  terminal.hpp
kernel/include/dts/: hashtable.h  stack.h
kernel/include/fs/: tar.h
kernel/src/: acpi.c  bootboot.rs  cfgtb.c  cfgtb.rs  collections.rs  debug.c  debug.rs  elf.c  env.c  error.c  error.rs  errors.c  fb.c  hart.rs  hashtable.c  helium.c  init.c  initrd.c  io.asm  io.rs  kernel.cpp  lib.rs  logging.rs  main.rs  math.c  mem.c  mem.rs  meta.rs  mutex.c  pci.c  proc.c  start.rs  sync.rs  sys.rs  system.rs  term.c  utils.c  utils.rs
kernel/src/fb/: fb.c  (+2 more)
kernel/stdinc/: ctype.h  errno.h  math.h  stdio.h  stdlib.h  string.h
(+547 files in other folders)
