[package]
name = "helium"
version = "0.0.1"
authors = ["Youssef Harmal"]
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
num-derive = "0.4.2"
num-traits = { version = "0.2.18", default-features = false }
rlibc = "1.0.0"
spin = "0.9.8"
x86_64 = "0.15.1"

[build-dependencies]
nasm-rs = "0.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
