[package]
name = "helium-kernel"
version = "0.0.1"
authors = ["Youssef Harmal"]
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
rlibc = "1.0.0"
spin = "0.9.8"
x86_64 = { version = "0.15.1", features = ["abi_x86_interrupt"] }

helium-syscall = { path = "../userspace/syscall" }

[build-dependencies]
nasm-rs = "0.3.0"
